--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
-    "morgan": "^1.10.0"
+    "favicon": "^0.0.2",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.15",
+    "path": "^0.12.7",
+    "server": "^1.0.37"
   }
 }
